# automagica

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
common/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
