[workspace]
members = ["client", "common", "server"]
resolver = "3"

[workspace.dependencies]  
# ecs
hecs = "0.10.5"

# serialization and deserialization
serde = { version = "1.0", features = ["derive"] }

# linear algebra library
glam = { version = "0.30.3", features = ["libm", "serde"] }

# Deterministic floating point operations outside of IEEE 754
libm = "0.2.11"